KUBERNETES/EXAMPLES/03_ingress/02_few_svc_ingress_DOESNT_WORK/deployment.yml
#Create a Deployments to be reached
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xbs-dpmnt-1
  labels:
    app: xbs-app-dpmnt-1
    type: front-end-dpmnt-1
spec:
  template:
    metadata:
      name: xbs-pod-1
      labels:
        app: xbs-app-pod-1
        type: front-end-dpmnt-1
    spec:
      containers:
      - name: xbs-container-1
        image: ppnp/image1
  replicas: 1
  selector:
    matchLabels:
      type: front-end-dpmnt-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xbs-dpmnt-2
  labels:
    app: xbs-app-dpmnt-2
    type: front-end-dpmnt-2
spec:
  template:
    metadata:
      name: xbs-pod-2
      labels:
        app: xbs-app-pod-2
        type: front-end-dpmnt-2
    spec:
      containers:
      - name: xbs-container-2
        image: ppnp/image2
  replicas: 1
  selector:
    matchLabels:
      type: front-end-dpmnt-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xbs-dpmnt-3
  labels:
    app: xbs-app-dpmnt-3
    type: front-end-dpmnt-3
spec:
  template:
    metadata:
      name: xbs-pod-3
      labels:
        app: xbs-app-pod-3
        type: front-end-dpmnt-3
    spec:
      containers:
      - name: xbs-container-3
        image: ppnp/image3
  replicas: 1
  selector:
    matchLabels:
      type: front-end-dpmnt-3
---
#Create appropriate Services
apiVersion: v1
kind: Service
metadata:
  name: xbs-svc-1
  labels:
    app: xbs-app-dpmnt-1
    type: front-end-dpmnt-1
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: xbs-app-dpmnt-1
    type: front-end-dpmnt-1
---
apiVersion: v1
kind: Service
metadata:
  name: xbs-svc-2
  labels:
    app: xbs-app-dpmnt-2
    type: front-end-dpmnt-2
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: xbs-app-dpmnt-2
    type: front-end-dpmnt-2
---
apiVersion: v1
kind: Service
metadata:
  name: xbs-svc-3
  labels:
    app: xbs-app-dpmnt-3
    type: front-end-dpmnt-3
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: xbs-app-dpmnt-3
    type: front-end-dpmnt-3
